@@ -1,4 +1,4 @@
-DROP TABLE IF EXISTS @PREFIX@response, @PREFIX@autoresponder;
+DROP TABLE IF EXISTS @PREFIX@response, @PREFIX@autoresponder, @PREFIX@log;
 
 CREATE TABLE @PREFIX@autoresponder (
   id INT AUTO_INCREMENT NOT NULL PRIMARY KEY,
@@ -25,3 +25,10 @@ CREATE TABLE @PREFIX@response (
 );
 CREATE INDEX @PREFIX@response_pkey ON @PREFIX@response(autoresponder);
 CREATE INDEX @PREFIX@response_skey ON @PREFIX@response(sender);
+
+CREATE TABLE @PREFIX@log (
+  autoresponder INT NOT NULL REFERENCES @PREFIX@autoresponder(id),
+  timestamp TIMESTAMP NOT NULL,
+  sent_response BOOL NOT NULL,
+  sender VARCHAR(255) NOT NULL
+);
