@@ -15,6 +15,8 @@ Changes in version 0.98
 - The MySQL autoresponder now supports an optional table name prefix to
   better interoperate with other applications using the same database.
 
+- Added support for a log file or table that is not pruned.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
